apps/synapse-portal-framework/src/components/namshub/NamshubAbout.module.scss
@use 'synapse-react-client/style/abstracts/variables' as SrcVariables;
@use 'sass:map';

.aboutTitle {
  padding: 0;

  :global(.MuiContainer-root) {
    color: var(--synapse-gray-1000);
    padding: 0;
  }

  :global(h2.title) {
    text-transform: none;
    font-size: 24px;
    font-weight: 400;
  }
}

.aboutDescription {
  color: var(--synapse-gray-900);
}

.aboutContainer {
  display: flex;
  flex-direction: column;
  padding: 16px;
  gap: 20px;

  @media (min-width: map.get(SrcVariables.$breakpoints, 'large')) {
    flex-direction: row;
    align-items: center;
    padding: 40px;
    gap: 50px;
  }
}

.aboutImageContainer {
  width: 100%;

  @media (min-width: map.get(SrcVariables.$breakpoints, 'large')) {
    width: 50%;
  }
}

.aboutImage {
  width: 100%;
  height: auto;
}

.aboutTextContainer {
  gap: 11px;

  @media (min-width: map.get(SrcVariables.$breakpoints, 'large')) {
    width: 50%;
  }
}

.aboutTitle:global(.MuiTypography-root) {
  color: var(--synapse-gray-1000);
}

